--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,23 @@ code {
   padding: 10px;
 }
 
+.modal {
+  position: absolute; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  border: 1px solid #888;
+  width: 80%; 
+}
+
 @media (max-width:600px) {
 
   .Sidebar{
