--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,24 @@ code {
   padding: 10px;
 }
 
+.create-user-form{
+  width: 70%;
+  margin-left: 400px;
+  height: 100%;
+  background-color: #2F4050;
+  color:white; 
+  padding:20px; 
+  border-radius: 15px;
+}
+
+.create-user-form h3{
+
+  background-color: #2F4050;
+  color: white;
+  padding:10px; 
+  margin-left: 30px;
+
+}
 @media (max-width:600px) {
 
   .Sidebar{
